--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dragula": "^3.7.3",
+    "jquery": "^3.6.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^10.2.1",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
