--- a/client/package.json
+++ b/client/package.json
@@ -14,16 +14,17 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "dragula": "^3.7.3",
-    "jquery": "^3.6.0",
     "sass": "^1.51.0",
     "sass-loader": "^10.2.1",
+    "v-click-outside": "^3.2.0",
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-chat-scroll": "^1.4.0",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
+    "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
