--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-chat-scroll": "^1.4.0",
+    "vue-head": "^2.2.0",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
